--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homecoming-map",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jmuking.github.io/homecoming-map)",
+  "homepage": "https://jmuking.github.io/homecoming-map",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
